tests/negative/contexts/print_no_io.orng
// print_no_io.orng:6:11: error: missing context `Writing`
//     @print("Hello, World!")
//          ^
// 
fn main() -> ()!() {
    @print("Hello, World!")
}